# equivalence-engine

./: .gitignore  CHANGELOG.md  README.adoc  antora-playbook.yml  build_output.txt  build_output_force.txt  dub.sdl  dub.selections.json  evolution-engine-expansion-to-filesystems.md  package.json  pnpm-lock.yaml  test_traversal.py  walkthrough.md
.github/workflows/: ci.yml  docs.yml  release.yml
changelog-details/: 2026-03-27 - Clarify Winget Publishing Job.md  2026-04-10 - Rename to Equivalence Engine.md
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc  installation.adoc  usage.adoc
homepage/: app.js  index.html  styles.css  theme.js
old_python/: pyproject.toml
old_python/src/qt_upgrader/: engine.py
old_python/src/qt_upgrader.egg-info/: PKG-INFO  requires.txt  top_level.txt
planning/: Cross-Distro Filesystem Path Equivalency Expansion.md
source/: app.d
src/qt_upgrader/: __init__.py  main.py
src/qt_upgrader.egg-info/: SOURCES.txt  entry_points.txt
src/qt_upgrader/rules/: qt5_to_qt6.json5
tests/: test.ps1  test.sh  test_file.py  test_migration.py  test_pyqt4.py  test_v5.astro
