[project]
name = "qt-upgrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryan Johnson", email = "ryan.johnson.code@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "json5>=0.13.0",
]

[project.scripts]
qt-upgrader = "qt_upgrader.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
